fixed logo position small screens again3

--- a/client/src/styles/newcss.scss
+++ b/client/src/styles/newcss.scss
@@ -3124,7 +3124,7 @@ h1 {
 
     #logo-big-screen {
       img {
-        transform: translateX(25px);
+        transform: translateX(23px);
       }
     }
 
